Prime Number (True and False)
public class HelloWorld{

     public static void main(String []args){
        System.out.println("Hello World");
        
        double number = Double.parseDouble(args[0]);
        
        boolean isprimenumber;
        
            if ( number % 1 == 0) && (number % 2 !=0); {
                if ( number % 1 == number) && (number % 2 !=0);
	            System.out.print("false");
            }
            else {
	            System.out.print("true");
        }

     }
}

HelloWorld.java:10: error: illegal start of expression                                                                                                                                                        
            if ( number % 1 == 0) && (number % 2 !=0); {                                                                                                                                                      
                                  ^                                                                                                                                                                           
HelloWorld.java:11: error: illegal start of expression                                                                                                                                                        
                if ( number % 1 == number) && (number % 2 !=0);                                                                                                                                               
                                           ^                                                                                                                                                                  
HelloWorld.java:14: error: 'else' without 'if'                                                                                                                                                                
            else {                                                                                                                                                                                            
            ^                                                                                                                                                                                                 
3 errors    
